WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159111
[macOS] Test gardening: Generic font families should not map to fonts which aren't installed
https://bugs.webkit.org/show_bug.cgi?id=159111
Summary
[macOS] Test gardening: Generic font families should not map to fonts which a...
Myles C. Maxfield
Reported
2016-06-24 18:40:08 PDT
[macOS] Generic font families should not map to fonts which aren't installed
Attachments
Patch
(3.03 KB, patch)
2016-06-24 18:43 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(788.07 KB, application/zip)
2016-06-24 19:34 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews103 for mac-yosemite
(875.87 KB, application/zip)
2016-06-24 20:06 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews113 for mac-yosemite
(1.42 MB, application/zip)
2016-06-24 20:11 PDT
,
Build Bot
no flags
Details
Patch
(2.92 KB, patch)
2016-06-27 17:58 PDT
,
Myles C. Maxfield
bfulgham
: review-
Details
Formatted Diff
Diff
Patch
(2.92 KB, patch)
2016-06-27 20:14 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-06-24 18:43:27 PDT
Created
attachment 282041
[details]
Patch
Myles C. Maxfield
Comment 2
2016-06-24 18:45:03 PDT
<
rdar://problem/25807529
>
Build Bot
Comment 3
2016-06-24 19:34:13 PDT
Comment on
attachment 282041
[details]
Patch
Attachment 282041
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1565422
New failing tests: svg/as-image/svg-image-with-data-uri-background.html
Build Bot
Comment 4
2016-06-24 19:34:17 PDT
Created
attachment 282044
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 5
2016-06-24 20:06:13 PDT
Comment on
attachment 282041
[details]
Patch
Attachment 282041
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1565546
New failing tests: svg/as-image/svg-image-with-data-uri-background.html
Build Bot
Comment 6
2016-06-24 20:06:16 PDT
Created
attachment 282045
[details]
Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-06-24 20:11:13 PDT
Comment on
attachment 282041
[details]
Patch
Attachment 282041
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1565527
New failing tests: svg/as-image/svg-image-with-data-uri-background.html
Build Bot
Comment 8
2016-06-24 20:11:16 PDT
Created
attachment 282046
[details]
Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 9
2016-06-27 17:58:15 PDT
Created
attachment 282196
[details]
Patch
Myles C. Maxfield
Comment 10
2016-06-27 20:14:19 PDT
Created
attachment 282206
[details]
Patch
Myles C. Maxfield
Comment 11
2016-06-27 21:05:11 PDT
Committed
r202538
: <
http://trac.webkit.org/changeset/202538
>
Brent Fulgham
Comment 12
2016-06-28 10:50:47 PDT
Comment on
attachment 282196
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282196&action=review
Typo!
> Source/WebCore/page/cocoa/SettingsCocoa.mm:62 > + Retainptr<CFSetRef> mandatoryAttributes = adoptCF(CFSetCreate(kCFAllocatorDefault, keys, WTF_ARRAY_LENGTH(keys), &kCFTypeSetCallBacks));
RetainPtr!
Brent Fulgham
Comment 13
2016-06-28 10:52:13 PDT
Comment on
attachment 282196
[details]
Patch This patch looks fine, but I'm worried it actually wasn't build or tested. R- to fix the typo and make sure EWS is happy.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug