[macOS] Test gardening: Generic font families should not map to fonts which aren't installed https://bugs.webkit.org/show_bug.cgi?id=159111 <rdar://problem/25807529>

Unreviewed.

Osaka-Mono does not come preinstalled on macOS Sierra. However, many Japanese users
will have the font installed. Before setting the generic font family, we should check
to see if the font is present.

* page/cocoa/SettingsCocoa.mm:
(WebCore::osakaMonoIsInstalled):
(WebCore::Settings::initializeDefaultFontFamilies):

Canonical link: https://commits.webkit.org/177289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202538 268f45cc-cd09-0410-ab3c-d52691b4dbfc